<resources>
    <string name="app_name">expense</string>
    <string name="emailAddress">emailAddress</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="validation_failed">Validation failed</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed">Proceed</string>
    <string name="sign_in">Sign-in</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="action_unlock">Enter your pin to unlock</string>
    <string name="action_forgot">Forgot Pin?</string>
    <string name="action_login">Login</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="action_go">GO</string>
    <string name="confirm_action">Confirm Action</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="response">Processed</string>
    <string name="notification">Notification</string>
    <string name="dash">Dash</string>
    <string name="hide">Hide</string>
    <string name="deposit">Cash Deposit</string>
    <string name="bt_config">Bluetooth Config</string>
    <string name="deposit_instructions">Deposit Instructions</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_instructions">Withdraw Instructions</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="withdraw_list">Withdraw List</string>
    <string name="accounts">My Accounts</string>
    <string name="config">Config</string>
    <string name="view_withdrawals">View Withdrawals</string>
    <string name="more_activities">More Activities</string>
    <string name="activities">Activities</string>
    <string name="view_instructions">How it works</string>
    <string name="reset_username">Reset the saved username</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_invalid_cred">Login failed. Invalid credentials</string>
    <string name="login_failed_invalid_pin">Login failed. Invalid pin</string>
    <string name="login_cancelled">Login operation was cancelled</string>
    <string name="session_timeout">Your session has timed out</string>
    <string name="remember_state">Remember state changed</string>
    <string name="tap_exit">Tap again to exit</string>
    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="no_txn">No transactions found</string>
    <string name="default_currency">KES</string>
    <string name="name">Name</string>
    <string name="remember_username">Remember username</string>
    <string name="warning">Warning</string>
    <string name="locked_message">Your account has been locked because of several failed login attempts. Please contact your branch for a pin reset</string>
    <string name="county_code">Country Code</string>
    <string name="error_occurred">An error occurred</string>
    <string name="account_locked">Your account has been locked</string>
    <string name="attempts_rem"> attempts remaining</string>
    <string name="wait">Please wait…</string>
    <string name="commission_header">Commissions</string>
    <string name="statement_header">Fetch this month\'s statement</string>
    <string name="my_agent_no">My Agent Number</string>
    <string name="incorrect_pin">Incorrect Pin</string>
    <string name="auth">Authenticating…</string>
    <string name="action_cannot_complete">Action could not be completed at the moment</string>
    <string name="enter_valid_amount">Please enter a valid amount</string>
    <string name="enter_valid_customer_account">Please enter a valid customer\'s account number</string>
    <string name="processing_txn">Processing transaction…</string>
    <string name="processing_req">Processing request…</string>
    <string name="failed_process_txn">Failed to process the transaction</string>
    <string name="service_unavailable">The service is unavailable at the moment. Try again later</string>
    <string name="failed_change_pin_not_completed">The change pin request could not be completed at this moment</string>
    <string name="login_again">Login to proceed</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_saved">Your email address has been saved</string>
    <string name="settings_saved">Setting saved</string>
    <string name="failed_change_pin">Change pin request failed</string>
    <string name="enter_credentials">Enter your credentials to login</string>
    <string name="txt_new">recent</string>
    <string name="cust_name">Customer\'s Name</string>
    <string name="cust_acc">Customer\'s Account</string>
    <string name="ph_withdraw_message">Withdraw message</string>
    <string name="ph_txn_time">12.00.00</string>
    <string name="details">Details</string>
    <string name="message">Message</string>
    <string name="amount">Amount</string>
    <string name="txn_ref">Transaction Reference</string>
    <string name="tran_time">Transaction Time</string>
    <string name="done">Done</string>
    <string name="more">More</string>
    <string name="print">Print</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="print_and_complete">Print &amp; Complete</string>
    <string name="txn_type">Transaction Type</string>
    <string name="comments">Comments</string>
    <string name="bt_status">Bluetooth status</string>
    <string name="bt_online">Online</string>
    <string name="bt_offline">Offline</string>
    <string name="bt_turn_on">Turn on</string>
    <string name="bt_turn_off">Turn off</string>
    <string name="bt_printer">Printer</string>
    <string name="bt_not_selected">Not Selected</string>
    <string name="bt_printer_not_selected">Printer not selected</string>
    <string name="bt_select">Select</string>
    <string name="bt_change">Change</string>
    <string name="bt_not_compatible">Not compatible</string>
    <string name="bt_not_off">"Bluetooth could not be turned off"</string>
    <string name="bt_wait">Print Interval</string>
    <string name="invalid_interval">Invalid interval value</string>
    <string name="bt_wait_default">5 seconds</string>
    <string name="bt_not_supported">This device does not support bluetooth</string>
    <string name="prompt_username">Enter username</string>
    <string name="prompt_pin">PIN</string>
    <string name="prompt_current_pin">Current Pin</string>
    <string name="prompt_new_pin">New Pin</string>
    <string name="prompt_confirm_new_pin">Confirm New Pin</string>
    <string name="username_required">Username is required</string>
    <string name="pin_required">Pin is required</string>
    <string name="prompt_valid_pin">Enter a valid pin</string>
    <string name="prompt_valid_new_pin">Enter a valid new pin</string>
    <string name="prompt_valid_confirm_new_pin">Enter a valid new pin confirmation</string>
    <string name="prompt_valid_confirm_and_new_pin">Your new pin does not match the confirmation entry</string>
    <string name="prompt_change_pin_invalid_session">Invalid session. Kindly login again to be able to change your pin</string>
    <string name="float_balance">Float Balance</string>
    <string name="logout">Logout</string>
    <string name="contact_centre">Contact Centre</string>
    <string name="profile">My Profile</string>
    <string name="change_pin">Change Pin</string>
    <string name="config_bt">Configure Bluetooth</string>
    <string name="commission">Commissions Earned</string>
    <string name="app_status_busy">Some tasks are still running in the background. Closing now might cause the app to have unexpected behaviour. Do you wish to proceed?</string>
    <string name="logout_message">You will be logged out</string>
    <string name="logout_message_post">You have been logged out</string>
    <string name="internet_access">Connect to the internet to access this option</string>
    <string name="internet_required">An internet connection is required</string>
    <string name="deposit_summary">Deposit money into a customer\'s account</string>
    <string name="withdrawal_summary">Agent Initiated Withdrawal</string>
    <string name="statement_summary">The full statement will be sent to your default email address. Proceed below to authorise the request.</string>
    <string name="commission_summary">Commissions earned - Summary</string>
    <string name="change_pin_summary">Change your pin</string>
    <string name="statement_change_email">Send to a different email address?</string>
    <string name="bt_config_summary">Quick config</string>
    <string name="debit_account">Source Account</string>
    <string name="credit_account">Destination Account</string>
    <string name="enter_cust_account">Enter Customer\'s Account Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_email">Enter an email address</string>
    <string name="enter_time_header">Enter print interval (1 – 9 seconds)</string>
    <string name="enter_time">Enter Time</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="fetch">Fetch</string>
    <string name="confirm">Confirm</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="abc">ABC</string>
    <string name="three">3</string>
    <string name="def">DEF</string>
    <string name="four">4</string>
    <string name="ghi">GHI</string>
    <string name="five">5</string>
    <string name="jkl">JKL</string>
    <string name="six">6</string>
    <string name="mno">MNO</string>
    <string name="seven">7</string>
    <string name="pqrs">PQRS</string>
    <string name="eight">8</string>
    <string name="tuv">TUV</string>
    <string name="nine">9</string>
    <string name="wxyz">WXYZ</string>
    <string name="zero">0</string>
    <string name="a">A</string>
    <string name="go">GO</string>
    <string name="PrinterAction">Open,QueryStatus,Write,Close</string>
    <string name="bt_device_paired">Paired devices</string>
    <string name="bt_device_select_device">Select device</string>
    <string name="bt_no_available_devices">No available devices</string>
    <string name="kplc_prepaid">Kenya Power - Prepaid</string>
    <string name="kplc_prepaid_summary">Buy KPLC Tokens</string>
    <string name="kplc_postpaid">Kenya Power - Postpaid</string>
    <string name="kplc_postpaid_summary">Pay my power bill</string>
    <string name="dstv">Dstv</string>
    <string name="dstv_summary">Pay my Dstv bill</string>
    <string name="gotv">Gotv</string>
    <string name="gotv_summary">Pay my GoTv bill</string>
    <string name="zuku">Zuku</string>
    <string name="zuku_summary">Pay my Zuku bill</string>
    <string name="jambo_jet">Jambojet</string>
    <string name="jambo_jet_summary">Pay for Jambo Jet</string>
    <string name="nairobi_water">Nairobi Water</string>
    <string name="nairobi_water_summary">Pay my water bill</string>
    <string name="startimes">StarTimes</string>
    <string name="startimes_summary">Pay my StarTimes bill</string>
    <string name="title_activity_agency_main">AgencyMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>