<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="124dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/ic_app_logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="Enter your credentials"
        android:textColor="@color/cG2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/jag_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdCentVertLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="67dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_gravity="end|center_vertical"
        android:contentDescription="@string/app_name"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_profile"
        android:tint="@color/cG1"
        app:layout_constraintBottom_toBottomOf="@+id/emailAddress"
        app:layout_constraintEnd_toStartOf="@+id/gdCentVertLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailAddress" />


    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/emailAddress"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/jag_w"
        android:paddingLeft="30px"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gdCentVertLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderLogin" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_gravity="end|center_vertical"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_pin"
        android:tint="@color/cG1"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/gdCentVertLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:paddingLeft="30px"
        android:textSize="20sp"
        android:fontFamily="@font/jag_w"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/gdCentVertLogin"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/bt_round_border_primary_fill"
        android:gravity="center"
        android:text="@string/action_login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.088" />

</androidx.constraintlayout.widget.ConstraintLayout>