<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPCG5"
    android:id="@+id/clContainerChangePin"
    tools:context=".view.ChangePinActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abChangePin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbChangePin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvConnectivityStatusChangePin"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/colorPCG1"
        android:elevation="10dp"
        android:gravity="center"
        android:text="No internet"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abChangePin" />

    <TextView
        android:id="@+id/tvNameChangePin"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/change_pin"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/jag_b"
        app:layout_constraintBottom_toBottomOf="@+id/abChangePin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/abChangePin"
        android:layout_marginLeft="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhite"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abChangePin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLogoChangePin"
                android:layout_width="27dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:tint="@color/colorPCB0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/tvSummaryChangePin"
                android:layout_width="312dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/change_pin_summary"
                app:fontFamily="@font/jag_b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivLogoChangePin"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vSeparatorChangePin"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPCG1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSummaryChangePin" />

            <LinearLayout
                android:id="@+id/llCurrentPinChangePin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vSeparatorChangePin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_pin_current"
                    android:tint="@color/colorPCG4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textAllCaps="false">

                    <EditText
                        android:id="@+id/etCurrentPinChangePin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/prompt_current_pin"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:fontFamily="@font/jag_w"
                        android:theme="@style/AutoComplete" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNewPinChangePin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llCurrentPinChangePin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_pin_new"
                    android:tint="@color/colorPCG4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textAllCaps="false">

                    <EditText
                        android:id="@+id/etNewPinChangePin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/prompt_new_pin"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:fontFamily="@font/jag_w"
                        android:theme="@style/AutoComplete" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llConfirmNewPinChangePin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llNewPinChangePin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_pin_new"
                    android:tint="@color/colorPCG4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textAllCaps="false">

                    <EditText
                        android:id="@+id/etConfirmNewPinChangePin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/prompt_confirm_new_pin"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:fontFamily="@font/jag_w"
                        android:theme="@style/AutoComplete" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btSubmitChangePin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/v_round_fill_pcr"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send"
                android:textAllCaps="true"
                app:fontFamily="@font/jag_b"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llConfirmNewPinChangePin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>